--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,10 +42,10 @@ jobs:
           - os: ubuntu-latest
             goos: solaris
             goarch: amd64
-          # Solaris SPARC (build on Linux as runner)
+          # FreeBSD (дополнительная поддерживаемая Unix-подобная система)
           - os: ubuntu-latest
-            goos: solaris
-            goarch: sparc64
+            goos: freebsd
+            goarch: amd64
 
     steps:
     - name: Checkout code
@@ -54,7 +54,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.19'
+        go-version: '1.23' # Исправленная версия
         cache: true
 
     - name: Get dependencies
