--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,54 +8,10 @@ on:
     branches: [ main, master ]
 
 jobs:
-  build:
-    name: Build ${{ matrix.platform }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          # Linux
-          - os: ubuntu-latest
-            goos: linux
-            goarch: amd64
-            platform: linux-amd64
-          - os: ubuntu-latest
-            goos: linux
-            goarch: arm64
-            platform: linux-arm64
-          - os: ubuntu-latest
-            goos: linux
-            goarch: 386
-            platform: linux-386
-          # Windows
-          - os: windows-latest
-            goos: windows
-            goarch: amd64
-            platform: windows-amd64
-          - os: windows-latest
-            goos: windows
-            goarch: 386
-            platform: windows-386
-          # macOS
-          - os: macos-latest
-            goos: darwin
-            goarch: amd64
-            platform: darwin-amd64
-          - os: macos-latest
-            goos: darwin
-            goarch: arm64
-            platform: darwin-arm64
-          # Solaris amd64 (build on Linux as runner)
-          - os: ubuntu-latest
-            goos: solaris
-            goarch: amd64
-            platform: solaris-amd64
-          # FreeBSD
-          - os: ubuntu-latest
-            goos: freebsd
-            goarch: amd64
-            platform: freebsd-amd64
-
+  # Linux builds
+  build-linux-amd64:
+    name: Build Linux AMD64
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -73,29 +29,253 @@ jobs:
 
     - name: Build
       run: |
-        # Set executable name based on OS
-        if [ "${{ matrix.goos }}" = "windows" ]; then
-          EXECUTABLE_NAME="gocl.exe"
-        else
-          EXECUTABLE_NAME="gocl"
-        fi
-        
-        # Build for target platform
-        GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -v -o ${EXECUTABLE_NAME} .
-      shell: bash
+        GOOS=linux GOARCH=amd64 go build -v -o gocl .
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: gocl-${{ matrix.platform }}
-        path: |
-          gocl
-          gocl.exe
-        if-no-files-found: ignore
+        name: gocl-linux-amd64
+        path: gocl
+
+  build-linux-arm64:
+    name: Build Linux ARM64
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.23'
+        cache: true
+
+    - name: Get dependencies
+      run: |
+        go mod download
+        go mod tidy
+
+    - name: Build
+      run: |
+        GOOS=linux GOARCH=arm64 go build -v -o gocl .
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: gocl-linux-arm64
+        path: gocl
+
+  build-linux-386:
+    name: Build Linux 386
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.23'
+        cache: true
+
+    - name: Get dependencies
+      run: |
+        go mod download
+        go mod tidy
+
+    - name: Build
+      run: |
+        GOOS=linux GOARCH=386 go build -v -o gocl .
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: gocl-linux-386
+        path: gocl
+
+  # Windows builds
+  build-windows-amd64:
+    name: Build Windows AMD64
+    runs-on: windows-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.23'
+        cache: true
+
+    - name: Get dependencies
+      run: |
+        go mod download
+        go mod tidy
+
+    - name: Build
+      run: |
+        GOOS=windows GOARCH=amd64 go build -v -o gocl.exe
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: gocl-windows-amd64
+        path: gocl.exe
+
+  build-windows-386:
+    name: Build Windows 386
+    runs-on: windows-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.23'
+        cache: true
+
+    - name: Get dependencies
+      run: |
+        go mod download
+        go mod tidy
+
+    - name: Build
+      run: |
+        GOOS=windows GOARCH=386 go build -v -o gocl.exe
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: gocl-windows-386
+        path: gocl.exe
+
+  # macOS builds
+  build-darwin-amd64:
+    name: Build macOS AMD64
+    runs-on: macos-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.23'
+        cache: true
+
+    - name: Get dependencies
+      run: |
+        go mod download
+        go mod tidy
+
+    - name: Build
+      run: |
+        GOOS=darwin GOARCH=amd64 go build -v -o gocl .
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: gocl-darwin-amd64
+        path: gocl
+
+  build-darwin-arm64:
+    name: Build macOS ARM64
+    runs-on: macos-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.23'
+        cache: true
+
+    - name: Get dependencies
+      run: |
+        go mod download
+        go mod tidy
+
+    - name: Build
+      run: |
+        GOOS=darwin GOARCH=arm64 go build -v -o gocl .
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: gocl-darwin-arm64
+        path: gocl
+
+  # Other Unix-like systems
+  build-solaris-amd64:
+    name: Build Solaris AMD64
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.23'
+        cache: true
+
+    - name: Get dependencies
+      run: |
+        go mod download
+        go mod tidy
+
+    - name: Build
+      run: |
+        GOOS=solaris GOARCH=amd64 go build -v -o gocl .
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: gocl-solaris-amd64
+        path: gocl
+
+  build-freebsd-amd64:
+    name: Build FreeBSD AMD64
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.23'
+        cache: true
+
+    - name: Get dependencies
+      run: |
+        go mod download
+        go mod tidy
+
+    - name: Build
+      run: |
+        GOOS=freebsd GOARCH=amd64 go build -v -o gocl .
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: gocl-freebsd-amd64
+        path: gocl
 
   release:
     name: Create Release
-    needs: build
+    needs: 
+      - build-linux-amd64
+      - build-linux-arm64
+      - build-linux-386
+      - build-windows-amd64
+      - build-windows-386
+      - build-darwin-amd64
+      - build-darwin-arm64
+      - build-solaris-amd64
+      - build-freebsd-amd64
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
