--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,10 +2,10 @@ name: Build and Release
 
 on:
   push:
-    branches: [ main, master ]
-    tags: [ 'v*' ]
+    branches: [ main ] # Только main, исключаем master если не используется
+    # tags: [ 'v*' ] # Убираем теги из триггера push, если хотите, чтобы latest создавался *только* для main
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
 
 jobs:
   # Linux builds
@@ -19,7 +19,6 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.23'
         cache: true
 
     - name: Get dependencies
@@ -47,7 +46,6 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.23'
         cache: true
 
     - name: Get dependencies
@@ -75,7 +73,6 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.23'
         cache: true
 
     - name: Get dependencies
@@ -104,7 +101,6 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.23'
         cache: true
 
     - name: Get dependencies
@@ -135,7 +131,6 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.23'
         cache: true
 
     - name: Get dependencies
@@ -167,7 +162,6 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.23'
         cache: true
 
     - name: Get dependencies
@@ -195,7 +189,6 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.23'
         cache: true
 
     - name: Get dependencies
@@ -224,7 +217,6 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.23'
         cache: true
 
     - name: Get dependencies
@@ -252,7 +244,6 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.23'
         cache: true
 
     - name: Get dependencies
@@ -270,8 +261,8 @@ jobs:
         name: gocl-freebsd-amd64
         path: gocl
 
-  release:
-    name: Create Release
+  release-latest:
+    name: Create/Update Latest Release
     needs: 
       - build-linux-amd64
       - build-linux-arm64
@@ -283,7 +274,8 @@ jobs:
       - build-solaris-amd64
       - build-freebsd-amd64
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
+    # Запускаем только при пуше в main
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -305,21 +297,42 @@ jobs:
             # Create archive based on platform
             if [[ "$platform" == *"windows"* ]]; then
               # Windows - create ZIP
-              (cd "$dir" && zip -r "../release/gocl-${{ github.ref_name }}-$platform.zip" .)
+              (cd "$dir" && zip -r "../release/gocl-latest-$platform.zip" .)
             else
               # Unix-like systems - create tar.gz
-              (cd "$dir" && tar -czf "../release/gocl-${{ github.ref_name }}-$platform.tar.gz" .)
+              (cd "$dir" && tar -czf "../release/gocl-latest-$platform.tar.gz" .)
             fi
           fi
         done
 
-    - name: Create Release
+    - name: Delete existing latest release assets (if any)
+      uses: mknejp/delete-release-assets@v1
+      with:
+        # Токен нужен с правами на удаление
+        token: ${{ secrets.GITHUB_TOKEN }}
+        # Ищем релиз с тегом 'latest'
+        tag: latest
+        # Удаляем все существующие ассеты
+        assets: '*'
+        # Не фейлим, если релиз не найден
+        fail_on_error: false
+
+    - name: Create or Update Release
       uses: softprops/action-gh-release@v1
       with:
+        # Используем фиксированный тег 'latest'
+        tag_name: latest
+        name: Latest Development Build
+        body: |
+          Latest automated build from the main branch.
+          Commit: ${{ github.sha }}
+          Build time: $(date -u)
+        # Файлы для загрузки
         files: |
-          release/gocl-${{ github.ref_name }}-*.zip
-          release/gocl-${{ github.ref_name }}-*.tar.gz
-        draft: true
-        prerelease: false
+          release/gocl-latest-*.zip
+          release/gocl-latest-*.tar.gz
+        # Перезаписываем, если релиз уже существует
+        draft: false
+        prerelease: true # Отмечаем как предварительный релиз
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
