--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -341,7 +341,7 @@ jobs:
           
           echo "Tag '$TAG_NAME' has been recreated on commit $COMMIT_SHA"
         env:
-          GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }} # Используйте ваш PAT
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Используйте ваш PAT
 
       - name: Delete existing latest release assets (if any)
         if: steps.wait_builds.outputs.at_least_one_build_succeeded == 'true'
