--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -323,15 +323,24 @@ jobs:
       - name: Delete and Recreate 'latest' tag
         if: steps.wait_builds.outputs.at_least_one_build_succeeded == 'true'
         run: |
+          # Настраиваем Git identity
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          
           # Получаем SHA последнего коммита в main
           COMMIT_SHA=$(git rev-parse HEAD)
           TAG_NAME="latest"
           
           echo "Current commit SHA: $COMMIT_SHA"
           
-          # Удаляем тег, если он существует
-          gh release delete "$TAG_NAME" --yes || echo "Tag $TAG_NAME did not exist or could not be deleted via release API."
-          git push origin ":refs/tags/$TAG_NAME" || echo "Tag $TAG_NAME was not found on remote to delete."
+          # Удаляем релиз, если он существует (игнорируем ошибки, если нет релиза)
+          gh release delete "$TAG_NAME" --yes 2>/dev/null || echo "Release $TAG_NAME did not exist or could not be deleted."
+          
+          # Удаляем тег, если он существует на remote
+          git push origin ":refs/tags/$TAG_NAME" 2>/dev/null || echo "Remote tag $TAG_NAME was not found to delete."
+          
+          # Удаляем локальный тег, если он существует
+          git tag -d "$TAG_NAME" 2>/dev/null || echo "Local tag $TAG_NAME was not found to delete."
           
           # Создаем аннотированный тег на текущем коммите
           git tag -a "$TAG_NAME" "$COMMIT_SHA" -m "Latest build from main branch. Commit: $COMMIT_SHA"
@@ -341,8 +350,8 @@ jobs:
           
           echo "Tag '$TAG_NAME' has been recreated on commit $COMMIT_SHA"
         env:
-          GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN2 }} # Используйте ваш PAT
-
+          GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN2 }}
+          
       - name: Delete existing latest release assets (if any)
         if: steps.wait_builds.outputs.at_least_one_build_succeeded == 'true'
         uses: mknejp/delete-release-assets@v1
