--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -373,7 +373,7 @@ jobs:
           tag_name: ${{ github.ref == 'refs/heads/main' && 'latest' || github.ref_name }}
           name: ${{ github.ref == 'refs/heads/main' && 'Latest Development Build' || format('Release {0}', github.ref_name) }}
           body: |
-            ${{ github.ref == 'refs/heads/main' && 'Latest automated build from the main branch.' || 'Release version ' + github.ref_name }}
+            ${{ github.ref == 'refs/heads/main' && 'Latest automated build from the main branch.' || format('Release version {0}', github.ref_name) }}
             Commit: ${{ github.sha }}
             Build time: $(date -u)
           files: |
