--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -224,9 +224,9 @@ jobs:
         id: check_draft
         if: github.ref == 'refs/heads/main'
         run: |
-          # Получаем заголовок последнего коммита
-          COMMIT_MESSAGE=$(git log -1 --pretty=format:%s)
-          echo "Last commit message: $COMMIT_MESSAGE"
+          # Получаем заголовок коммита, который вызвал этот workflow
+          COMMIT_MESSAGE=$(git log -1 --pretty=format:%s ${{ github.sha }})
+          echo "Trigger commit message: $COMMIT_MESSAGE"
           
           # Проверяем, заканчивается ли заголовок на "-draft"
           if [[ "$COMMIT_MESSAGE" == *"-draft" ]]; then
@@ -236,6 +236,7 @@ jobs:
             echo "Commit is not draft. Proceeding with release creation."
             echo "is_draft=false" >> $GITHUB_OUTPUT
           fi
+
 
       - name: Skip release for draft commits (only for main branch)
         if: github.ref == 'refs/heads/main' && steps.check_draft.outputs.is_draft == 'true'
